@@ -4,8 +4,10 @@ import java.util.LinkedList;
 import java.util.List;
 
 import minijava.intermediate.Label;
+import minijava.intermediate.tree.TreeExpName;
 import minijava.intermediate.tree.TreeMethod;
 import minijava.intermediate.tree.TreeStm;
+import minijava.intermediate.tree.TreeStmCJump;
 import minijava.intermediate.tree.TreeStmJump;
 import minijava.intermediate.tree.TreeStmLabel;
 
@@ -36,26 +38,70 @@ public class MethodBlocks {
 		this.treeMethod = m;
 	}
 	
-	/*public List<Block> sort(){
+	public void sort(){
 		List<Block> workingBlocks = blockList;
 		List<Block> orderedBlocks = new LinkedList<>();
 		
 		while (!workingBlocks.isEmpty()){
-			orderedBlocks.add(blockList.get(0));
-			TreeStm last = blockList.get(0).getLast();
-			blockList.remove(0);
+			orderedBlocks.add(workingBlocks.get(0));
+			workingBlocks.remove(0);
+			//Letztes Statement des zuletz hinzugefügten Blocks an orderedBlocks
+			TreeStm last = orderedBlocks.get(orderedBlocks.size()-1).getLast();
 			// TODO
 			if(last instanceof TreeStmJump){
 				TreeStmJump tj = (TreeStmJump) last;
-				Block b = this.findAndRemove(tj.getPossibleTargets().get(0), orderedBlocks);
-				if (b != null){
-					b.stmList.remove(b.stmList.size() -1);
+				Block handledBlock = this.findAndRemove(tj.getPossibleTargets().get(0), workingBlocks);
+				if (handledBlock != null){
+					orderedBlocks.get(orderedBlocks.size()-1).removeLast();
+					orderedBlocks.add(handledBlock);
+					//handledBlock.stmList.remove(handledBlock.stmList.size() -1);
+				}
+				else{
+					//Block not in workingList
+					//nothing has to be done
 				}
 			}
+			else if(last instanceof TreeStmCJump){
+				TreeStmCJump tcj = (TreeStmCJump) last;
+				Block falseBlock = this.find(tcj.getLabelFalse(), workingBlocks);
+				Block trueBlock = this.find(tcj.getLabelTrue(), workingBlocks);
+				if(falseBlock != null){
+					this.findAndRemove(tcj.getLabelFalse(), workingBlocks);
+					orderedBlocks.add(falseBlock);
+				}
+				else if(falseBlock == null && trueBlock != null){
+					//negate CJump and switch Labels
+					TreeStmCJump newTcj = new TreeStmCJump(tcj.getRel().neg(), tcj.getLeft(), tcj.getRight(), tcj.getLabelFalse(), tcj.getLabelTrue());
+					//delete old CJump and add new
+					orderedBlocks.get(orderedBlocks.size()-1).removeLast();
+					orderedBlocks.get(orderedBlocks.size()-1).stmList.add(newTcj);
+					this.findAndRemove(tcj.getLabelTrue(), workingBlocks);
+					
+				}
+				else if(falseBlock == null && trueBlock == null){
+					//change falseLabel
+					Label dummyJumpLabel = new Label();
+					TreeStmCJump newTcj = new TreeStmCJump(tcj.getRel().neg(), tcj.getLeft(), tcj.getRight(), tcj.getLabelTrue(), dummyJumpLabel);
+					orderedBlocks.get(orderedBlocks.size()-1).removeLast();
+					orderedBlocks.get(orderedBlocks.size()-1).stmList.add(newTcj);
+					
+					//create new Block with dummyJump
+					List<TreeStm> dummyList = new LinkedList<>();
+					TreeStmLabel dummyLabelStm = new TreeStmLabel(dummyJumpLabel);
+					List<Label> possibleTargets = new LinkedList<>();
+					possibleTargets.add(dummyJumpLabel);
+					TreeStmJump dummyJumpStm = new TreeStmJump(new TreeExpName(dummyJumpLabel), possibleTargets);
+					dummyList.add(dummyLabelStm);
+					dummyList.add(dummyJumpStm);
+					
+					//add Block
+					Block dummyBlock = new Block(dummyList);
+					orderedBlocks.add(dummyBlock);
+				}
+			}
+			this.blockList = orderedBlocks;
 		}
-		
 	}
-	*/
 	
 	public Block findAndRemove(Label l, List<Block> blockList){
 		for (int i=0; i< blockList.size(); i++){
@@ -69,6 +115,18 @@ public class MethodBlocks {
 		return null;
 	}
 
+	public Block find(Label l, List<Block> blockList){
+		for (int i=0; i< blockList.size(); i++){
+			Block b = blockList.get(i);
+			TreeStmLabel tl = (TreeStmLabel) b.getFirst();
+			if (tl.getLabel().equals(l)){
+				return b;
+			}
+		}
+		return null;
+	}
+	
+	
 	public String toString(){
 		 StringBuilder s = new StringBuilder();
 		    s.append(treeMethod.getName()).append("(").append(treeMethod.getNumberOfParameters()).append(") {\n");
